# simple-ssg

./: .gitignore  Cargo.toml  README.dj  README.md  command_reference.html  index.html  template.html  templating.html
.github/workflows/: deploy-site.yml
aaaa/aaaaaa2/: hi.html
docs/: command_reference.dj  index.dj  template.html  templating.md
docs/notes/: contact-ryanabx.dj  djot-example.dj  markdown-example.md
notes/: contact-ryanabx.html  djot-example.html  markdown-example.html
src/: errors.rs  main.rs  templates.rs  tests.rs  utils.rs
