[package]
name = "djot-ssg"
authors = ["Ryan Brue <ryanbrue.dev@gmail.com>"]
repository = "https://github.com/ryanabx/djot-ssg"
license = "MIT"
readme = "README.dj"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
jotdown = "0.4.1"
log = "0.4.22"
walkdir = "2.5.0"
