[package]
name = "simple-ssg"
authors = ["Ryan Brue <ryanbrue.dev@gmail.com>"]
repository = "https://github.com/ryanabx/simple-ssg"
license = "MIT"
readme = "README.md"
version = "3.0.0"
edition = "2021"
description = "Plain and simple static site generator for Djot and Markdown light markup languages"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
jotdown = "0.5.0"
log = "0.4.22"
pulldown-cmark = "0.12.1"
thiserror = "1.0.63"
walkdir = "2.5.0"

[dev-dependencies]
rand = "0.8.5"
